refactor: made changes to the task service